--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
+    "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "eslint": "^8.35.0",
@@ -29,6 +30,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "yup": "^1.0.2"
   }
 }
