--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "mysql2": "^3.2.0",
     "typescript": "^4.9.5",
     "yup": "^1.0.2"
   }
